guiPigLatin pig audio

--- a/03week/guiPigLatin.html
+++ b/03week/guiPigLatin.html
@@ -12,11 +12,8 @@
     <br />
     <h1>Word: <input id="word" /></h1>
     <br />
-    <audio id="pigAudio">
-      <source src="./audio/snortingPig.mp3" type="audio/mpeg" />
-    </audio>
     <button onclick="handleClick()">
-      Oink!
+      Oinkyay!
     </button>
     <br />
     <h1 id="translation">
