01week - dataTypes Complete

--- a/01week/dataTypes.html
+++ b/01week/dataTypes.html
@@ -10,8 +10,18 @@
       Data Types
     </h1>
     <div>
-      <span id="theTime"><button>Click To Set Date</button></span>
+      <span id="theTime"><button>WHAT'S TODAY?</button></span>
+    </div>
+    <div>
+      <h2>How old is Eric?</h2>
+      <span id="myAge"><button>GUESS MY AGE?</button></span>
+    </div>
+    <div>
+      <h2>2036 + 1000</h2>
+      <span id="sum">
+        <button>=</button>
+      </span>
     </div>
   </body>
-  <script src="dataTypes.js"></script>
+  <script src="datatypes.js"></script>
 </html>
