RPS gui attempt

--- a/01week/rockPaperScissors.html
+++ b/01week/rockPaperScissors.html
@@ -20,7 +20,6 @@
         <option value="scissors">Scissors</option>
       </select>
     </div>
-    <span id="p1span"><button>SHOOT!</button></span>
 
     <!-- Player 2 -->
     <div id="player2">
@@ -31,7 +30,9 @@
         <option value="scissors">Scissors</option>
       </select>
     </div>
-    <span id="p2span"><button>SHOOT!</button></span>
+    <div>
+      <span id="answer"><button>SHOOT!</button></span>
+    </div>
   </body>
   <script src="rockPaperScissors.js"></script>
 </html>
