--- a/01week/rockPaperScissors.html
+++ b/01week/rockPaperScissors.html
@@ -31,7 +31,7 @@
       </select>
     </div>
     <div>
-      <span id="answer"><button>SHOOT!</button></span>
+      <span id="answer">SHOOT!</span>
     </div>
   </body>
   <script src="rockPaperScissors.js"></script>
