--- a/03week/ticTacToe.html
+++ b/03week/ticTacToe.html
@@ -52,6 +52,10 @@
           <div id="8" class="square"></div>
           <div id="9" class="square"></div>
         </div>
+
+        <div class="reset">
+          <a id="resetBoard" class="reset" href="a" onclick="">Reset Board</a>
+        </div>
       </div>
     </div>
   </body>
